Fix banner spacing and text (#8776)
adjust banner

--- a/app/_assets/stylesheets/header.less
+++ b/app/_assets/stylesheets/header.less
@@ -56,7 +56,6 @@ body {
         }
         a {
           text-decoration: underline;
-          margin-left: 10px;
         }
         .closebanner {
           // position: absolute;
